{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 57,
  "lineage": "e0252d3c-2e5f-6725-8226-34050a051cc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083323d6898dd2dab",
            "association_id": "eipassoc-0e7c2caf116f2ee2d",
            "domain": "vpc",
            "id": "eipalloc-083323d6898dd2dab",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-08196ca33811e80c1",
            "private_dns": "ip-192-168-1-147.ca-central-1.compute.internal",
            "private_ip": "192.168.1.147",
            "public_dns": "ec2-15-156-132-198.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.132.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:internet-gateway/igw-07c8a28b1f4fd5646",
            "id": "igw-07c8a28b1f4fd5646",
            "owner_id": "432621609875",
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-083323d6898dd2dab",
            "connectivity_type": "public",
            "id": "nat-0a27b87cd372d3cac",
            "network_interface_id": "eni-08196ca33811e80c1",
            "private_ip": "192.168.1.147",
            "public_ip": "15.156.132.198",
            "subnet_id": "subnet-0d1575e9e8fde6e69"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "grt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-0efb13dd97487830a",
            "id": "rtb-0efb13dd97487830a",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c8a28b1f4fd5646",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:route-table/rtb-0068650b376992987",
            "id": "rtb-0068650b376992987",
            "owner_id": "432621609875",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a27b87cd372d3cac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fd1d04c2b1cc9c6",
            "route_table_id": "rtb-0efb13dd97487830a",
            "subnet_id": "subnet-0d1575e9e8fde6e69"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.grt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d4b9a7c2023c7ac",
            "route_table_id": "rtb-0efb13dd97487830a",
            "subnet_id": "subnet-083642fd1868f7158"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.grt",
            "aws_subnet.public_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86bb85b422b7faa",
            "route_table_id": "rtb-0068650b376992987",
            "subnet_id": "subnet-0718e4397cb18622c"
          },
          "dependencies": [
            "aws_route_table.nrt",
            "aws_subnet.private_subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0357dd8bbba515c1e",
            "route_table_id": "rtb-0068650b376992987",
            "subnet_id": "subnet-041cbfbdbb665688b"
          },
          "dependencies": [
            "aws_route_table.nrt",
            "aws_subnet.private_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-0718e4397cb18622c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0718e4397cb18622c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-041cbfbdbb665688b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041cbfbdbb665688b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "private_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-0d1575e9e8fde6e69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1575e9e8fde6e69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:subnet/subnet-083642fd1868f7158",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083642fd1868f7158",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432621609875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "public_subnet",
              "owner": "Akash"
            },
            "vpc_id": "vpc-0f96159e064d5c62c"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:432621609875:vpc/vpc-0f96159e064d5c62c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e495cb59114b29dd",
            "default_route_table_id": "rtb-0f4ad0b035aac00f4",
            "default_security_group_id": "sg-0f8a3151e55100724",
            "dhcp_options_id": "dopt-0dc291da4e0fe352d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f96159e064d5c62c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4ad0b035aac00f4",
            "owner_id": "432621609875",
            "tags": {
              "Name": "My-Vpc",
              "owner": "Akash"
            },
            "tags_all": {
              "Name": "My-Vpc",
              "owner": "Akash"
            }
          }
        }
      ]
    }
  ]
}